# ETL

./: .env.example  .gitignore  MakeFile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: reporting_daily.py  sales_transform.py  weather_ingestion.py
docs/: architecture.md  index.md
infrastructure/: Dockerfile.airflow  docker-compose.yaml
infrastructure/config/: init-multiple-dbs.sh
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: airflow_rules.yml  prometheus.yml
plugins/hooks/: weather_api_hook.py
plugins/operators/: data_quality_check.py
scripts/data_generator/: generate_synthetic_sales.py
sql/analytics/: sales_weather_correlation.sql  store_performance_ranking.sql
sql/ddl/: create_indexes_optimization.sql  create_tables.sql
sql/transformations/: aggregate_weather_daily.sql  data_quality_checks.sql  mart_sales_weather.sql
tests/: conftest.py
tests/dags/: test_dag_integrity.py
tests/transformations/: test_data_quality.py
