[tool.poetry]
name = "retail-weather-etl"
version = "1.0.0"
description = "ETL pipeline for retail sales and weather analysis"
authors = ["Data Engineering Team <data-eng@company.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/retail-weather-etl"
documentation = "https://yourusername.github.io/retail-weather-etl"
keywords = ["etl", "airflow", "data-engineering", "postgresql", "weather", "retail"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.dependencies]
python = "^3.11"
apache-airflow = "2.8.1"
pandas = "^2.1.4"
numpy = "^1.26.2"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
pendulum = "^2.1.2"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pylint = "^3.0.2"
sqlfluff = "^2.3.5"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.8"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
great-expectations = "^0.18.9"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "venv", "migrations"]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--tb=short",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "data_quality: Data quality tests",
]

[tool.coverage.run]
source = ["dags", "plugins"]
omit = ["*/tests/*", "*/migrations/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.sqlfluff.core]
dialect = "postgres"
templater = "jinja"
sql_file_exts = [".sql", ".sql.j2"]
exclude_rules = "L016,L031,L034"
max_line_length = 120

[tool.sqlfluff.rules]
tab_space_size = 4
indent_unit = "space"
comma_style = "trailing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"